--- a/react/src/components/Admin/Table/TableAdmin/TableAdmin.scss
+++ b/react/src/components/Admin/Table/TableAdmin/TableAdmin.scss
@@ -1,2 +1,16 @@
 .table-admin {
+  position: relative;
+  flex: 0 1 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  &:hover {
+    opacity: 0.5;
+    cursor: pointer;
+  }
+  img {
+    height: 200px;
+    width: 200px;
+  }
 }
