--- a/react/src/components/Admin/Table/TableListAdmin/TableListAdmin.scss
+++ b/react/src/components/Admin/Table/TableListAdmin/TableListAdmin.scss
@@ -1,2 +1,23 @@
 .table-list-admin {
+  display: flex;
+  flex-wrap: wrap;
+
+  &__reload {
+    margin: 0;
+    position: absolute;
+    top: 30px;
+    right: 70px;
+  }
+
+  &__reload-toggle {
+    position: absolute !important;
+    top: 20px;
+    right: 150px;
+    display: flex;
+    align-items: center;
+
+    span {
+      margin: 20px;
+    }
+  }
 }
