--- a/react/src/components/Admin/Table/TableAdmin/TableAdmin.scss
+++ b/react/src/components/Admin/Table/TableAdmin/TableAdmin.scss
@@ -9,8 +9,20 @@
     opacity: 0.5;
     cursor: pointer;
   }
-  img {
+
+  .ui.label {
+    margin: 0;
+    font-size: 20px;
+    position: absolute;
+    top: 30px;
+  }
+
+  svg {
     height: 200px;
     width: 200px;
+
+    &.pending {
+      fill: #0094e3;
+    }
   }
 }
