--- a/react/src/components/Admin/Table/TableAdmin/TableAdmin.scss
+++ b/react/src/components/Admin/Table/TableAdmin/TableAdmin.scss
@@ -20,6 +20,9 @@
   svg {
     height: 200px;
     width: 200px;
+    &.busy {
+      fill: #bb7900;
+    }
 
     &.pending {
       fill: #0094e3;
