--- a/react/src/components/Admin/Orders/AddOrderForm/AddOrderForm.scss
+++ b/react/src/components/Admin/Orders/AddOrderForm/AddOrderForm.scss
@@ -1,4 +1,24 @@
 .add-order-form {
+  &__list {
+    margin-top: 20px;
+    max-height: 400px !important;
+    overflow-y: auto;
+
+    &-product {
+      margin-top: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      .ui.image {
+        margin-right: 20px !important;
+        width: 100px !important;
+        height: 60px !important;
+        border-radius: 0 !important;
+      }
+    }
+  }
+
   .ui.primary.button {
     margin-top: 50px;
   }
